--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,9 +40,10 @@
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <data android:scheme="vnd.android.nfc"
-                android:host="ext"
-                android:pathPrefix="/com.sam0610:externalType"/>
+                <data
+                    android:scheme="vnd.android.nfc"
+                    android:host="ext"
+                    android:pathPrefix="/com.sam0610:externaltype" />
 
             </intent-filter>
 
